syntax = "proto3";

option go_package = "github.com/JustDean/sam/grpc";

service Sam {
    rpc Signup (CredentialsRequest) returns (User) {}
    rpc Login (CredentialsRequest) returns (Session) {}
    rpc SignupAndLogin(CredentialsRequest) returns (Session) {}
    rpc Logout (SessionId) returns (Blank) {}
    rpc Authenticate (SessionId) returns (User) {}
    rpc ChangePassword (ChangePasswordRequest) returns (Blank) {}
};

message CredentialsRequest {
    string username = 1;
    string password = 2;
}

message ChangePasswordRequest {
    string username = 1;
    string current_password = 2;
    string new_password = 3;
}

message Blank {}

message SessionId {
    string id = 1;
}

message User {
    string username = 2;
}

message Session {
    string id = 1;
    string valid_through = 2;
    string username = 3;
}
